syntax = "proto3";

option csharp_namespace = "GrpcServiceApp1";

package calculation;

service Calculation {
  rpc Sum (CalcRequest) returns (CalcResponse);
  rpc Subtract (CalcRequest) returns (CalcResponse);
}

message CalcRequest {
  int32 Number1 = 1;
  int32 Number2 = 2;
}

message CalcResponse {
  int32 Result = 1;
}
